<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/info"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/gpsButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/gpsLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/cameraButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/cameraLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </FrameLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/touchscreenButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/touchscreenLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/microphoneButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/microphoneLabel"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </FrameLayout>
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/guideTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide"/>
    </TableRow>

</TableLayout>